TAG: vocload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: vocload-5-2-2-1
DATE: 06/19/2015
STAFF: dbm
CHANGES:
1) GO.config MA.config MCV.config MP.config RV.config: MAINTAINER update

TAG: vocload-5-2-1-5
DATE: 06/19/2015
STAFF: kstone
CHANGES: GO PG conversion

TAG: vocload-5-2-1-4
DATE: 04/10/2015
STAFF: lec
CHANGES:
1) TR11750/OMIMtermcheck.py

TAG: vocload-5-2-1-3
TAG: vocload-5-2-1-2
TAG: vocload-5-2-1-1
DATE: 01/22/2015, 01/23/2015
STAFF: kstone, lec
CHANGES:
1) TR11750/add PG slipping
2) loadOBO-DC.sh:DCLUSTER_FILENAME should be DCLUSTERSYN_FILE

TAG: vocload-5-1-9-3
DATE: 07/23/2014
STAFF: dbm
CHANGES:
1) RV.config: restore MAINTAINER to default

TAG: vocload-5-1-9-2
DATE: 07/23/2014
STAFF: dbm
CHANGES:
1) RV.config, RV.rcd: remove scrum-bob references in paths

TAG: vocload-5-1-9-1
DATE: 07/03/2014
STAFF: sc	
CHANGES: merge tr11560 branch to trunk

TAG: vocload-tr11560-3
DATE: 04/03/2014
STAFF: sc
CHANGES:
1) RV.rcd - updated stanzas to reflect new terminology, removed ABBREV as it
        is not used 

TAG: vocload-tr11560-2
DATE: 03/07/2014
STAFF: sc
CHANGES:
1) OBOParser.py - handling of mult-word synonym type for Feature
   relationship load
TAG: vocload-tr11560-1
DATE: 03/06/2014
STAFF: sc
CHANGES:
1) Install - added RV directories
2) loadOBO.py - add Feature Relationship vocab handling
3) RV.config, RV.rcd - added

TAG: vocload-tr11560-BP
DATE: 03/03/2014
STAFF: sc
CHANGES: Branch Point Tag for Feature Relationships project

TAG: vocload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: vocload-5-1-6-2
DATE: 12/18/2013
STAFF: sc
CHANGES: Merge tr11468 changes to trunk

TAG:  vocload-tr11468-2
DATE: 11/20/2013
STAFF: sc
CHANGES:
1) added all output dirs to Install script

TAG: vocload-tr11468-1
DATE: 11/18/2013
STAFF: sc
CHANGES: removed: vocloadlib.py, loadDAG.py, html.py, dbTable.py, Log.py
    these have been factored out into lib_py_vocload

TAG: vocload-tr11468-BP
DATE: 11/18/2013
STAFF: sc