@@ -1,0 +1,79 @@
+#!/bin/sh
+
+#
+# Program: CL.config
+#
+# Purpose:
+#
+#   Configuration file for CL load
+#
+# Usage:
+#
+#   Execute this file from a script or command line to
+#   set environment variables for CL load
+#
+# History:
+#
+#	09/02/2015	lec
+#	- TR1172/new Configuration file
+#
+
+cd `dirname $0` 
+
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeCL"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveCL"
+DATA_DIR="/data/downloads/purl.obolibrary.org/obo/cl"
+export RUNTIME_DIR
+export ARCHIVE_DIR
+export DATA_DIR
+
+TERM_FILE="${RUNTIME_DIR}/Termfile"
+OBO_FILE="${DATA_DIR}/cl-basic.obo"
+OBO_FILE_VERSION="1.2"
+
+export TERM_FILE
+export OBO_FILE
+export OBO_FILE_VERSION
+
+# This variable will let the loadTerm module know that it should expect to
+# find a synonym type column in the Termfile.
+#
+USE_SYNONYM_TYPE=1
+export USE_SYNONYM_TYPE
+
+LOAD_PROGRAM="${LOAD_PROGRAM}"
+RCD_FILE="CL.rcd"
+export LOAD_PROGRAM
+export RCD_FILE
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin";;
+esac
+export MAINTAINER
+
+# vocabulary attributes:
+
+VOCAB_NAME="Cell Ontology"		 # name of vocabulary (VOC_Vocab.name)
+VOCAB_COMMENT_KEY=1000   # name of note types for comments
+ACC_PREFIX="CL"		 # acc ID prefix
+JNUM="J:73041"		 # reference for this vocabulary
+IS_SIMPLE=1		 # structured vocabulary; should be a .rcd file
+IS_PRIVATE=0		 # acc IDs are public
+LOGICALDB_KEY=173
+ANNOT_TYPE_KEY=1000      # VOC_AnnotType._AnnotType_key; report annotations to
+			 # newly obsoleted terms
+MGITYPE=13		 # ACC_MGIType._MGIType_key
+DAG_ROOT_ID="CL:0000000" # CL ID of root node which is referfed to in multiple files
+
+export VOCAB_NAME
+export VOCAB_COMMENT_KEY
+export ACC_PREFIX
+export JNUM
+export IS_SIMPLE
+export IS_PRIVATE
+export LOGICALDB_KEY
+export ANNOT_TYPE_KEY
+export MGITYPE
+export DAG_ROOT_ID
+
