@@ -1,0 +1,32 @@
+<HTML><HEADER>
+<body bgcolor="#ffffff" link="#006666" vlink="#666666">
+<TITLE>Cell Ontology Vocabulary/DAG Load</TITLE>
+</HEADER>
+<BODY>
+
+<H2>Cell Ontology Vocabulary/DAG Load</H2>
+
+<H3>Inputs</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/runTimeCL/cl.obo">cl.obo</A>
+</UL>
+
+<H3>Reports</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/runTimeCL/discrepancy.html">discrepancy.html</A> - Curator Report
+<LI><A HREF="/data/loads/mgi/vocload/runTimeCL/dagDiscrepancy.html">dagDiscrepancy.html</A> - DAG Discrepancy Report
+</UL>
+
+<H3>Outputs</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/runTimeCL/validationLog.txt">validationLog.txt</A> - OBO input file validation errors
+<LI><A HREF="/data/loads/mgi/vocload/runTimeCL/fullLog.txt">fullLog.txt</A> - File generated by vocload containing a complete record of the job, including all SQL executed.
+<LI><A HREF="/data/loads/mgi/vocload/runTimeCL/Termfile">Termfile</A> - File generated by vocload containing all the terms being processed.
+<LI><A HREF="/data/loads/mgi/vocload/runTimeCL/"><B>All available run-time files</B></A> - All files located in the run-time directory.
+</UL>
+
+<H3>Archives</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/archiveCL/"><B>Archive</B></A> - Data files from previous loads.
+</UL>
+
