@@ -29,8 +29,8 @@
 
 cd `dirname $0` 
 
-RUNTIME_DIR="/data/loads/mgi/vocload/runTimeGO"
-ARCHIVE_DIR="/data/loads/mgi/vocload/archiveGO"
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeGO"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveGO"
 DATA_DIR="/data/downloads/purl.obolibrary.org/obo/go"
 export RUNTIME_DIR
 export ARCHIVE_DIR
@@ -54,10 +54,13 @@ export USE_SYNONYM_TYPE
 
 LOAD_PROGRAM="${LOAD_PROGRAM} GOremoveannot.py"
 RCD_FILE="GO.rcd"
-MAINTAINER="mgiadmin, harold.drabkin@jax.org"
-
 export LOAD_PROGRAM
 export RCD_FILE
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin,harold.drabkin@jax.org";;
+esac
 export MAINTAINER
 
 # vocabulary attributes:
