@@ -20,16 +20,19 @@
 
 cd `dirname $0` 
 
-RUNTIME_DIR="/data/loads/mgi/vocload/runTimeIP"
-ARCHIVE_DIR="/data/loads/mgi/vocload/archiveIP"
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeIP"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveIP"
 
 export RUNTIME_DIR
 export ARCHIVE_DIR
 
 LOAD_PROGRAM="IP.py ${LOAD_PROGRAM}"
-MAINTAINER="mgiadmin"
-
 export LOAD_PROGRAM
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin";;
+esac
 export MAINTAINER
 
 # vocabulary attributes:
@@ -40,8 +43,7 @@ JNUM="J:82527"		# reference for this vocabulary
 IS_SIMPLE=1		# structured vocabulary
 IS_PRIVATE=0		# acc IDs are public LOGICALDB_KEY=28	# ACC_LogicalDB._LogicalDB_key
 LOGICALDB_KEY=28        # ACC_LogicalDB._LogicalDB_key
-ANNOT_TYPE_KEY=1003     # VOC_AnnotType._AnnotType_key; report annotations to
-                        # newly obsoleted terms
+ANNOT_TYPE_KEY=1003     # VOC_AnnotType._AnnotType_key; report annotations to newly obsoleted terms
 
 export VOCAB_NAME
 export VOCAB_COMMENT_KEY
