@@ -20,8 +20,8 @@
 
 cd `dirname $0` 
 
-RUNTIME_DIR="/data/loads/mgi/vocload/runTimeMA"
-ARCHIVE_DIR="/data/loads/mgi/vocload/archiveMA"
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeMA"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveMA"
 
 export RUNTIME_DIR
 export ARCHIVE_DIR
@@ -38,9 +38,12 @@ USE_SYNONYM_TYPE=1
 export USE_SYNONYM_TYPE
 
 RCD_FILE="MA.rcd"
-MAINTAINER="mgiadmin, terry.hayamizu@jax.org"
-
 export RCD_FILE
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin,terry.hayamizu@jax.org";;
+esac
 export MAINTAINER
 
 TRDIR="/mgi/all/wts_projects/4500/4537"
