@@ -20,8 +20,8 @@
 
 cd `dirname $0` 
 
-RUNTIME_DIR="/data/loads/mgi/vocload/runTimeMP"
-ARCHIVE_DIR="/data/loads/mgi/vocload/archiveMP"
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeMP"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveMP"
 
 export RUNTIME_DIR
 export ARCHIVE_DIR
@@ -38,9 +38,12 @@ USE_SYNONYM_TYPE=1
 export USE_SYNONYM_TYPE
 
 RCD_FILE="MP.rcd"
-MAINTAINER="mgiadmin, cynthia.smith@jax.org, susan.bello@jax.org"
-
 export RCD_FILE
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin, cynthia.smith@jax.org, susan.bello@jax.org";;
+esac
 export MAINTAINER
 
 # vocabulary attributes:
