@@ -20,8 +20,8 @@
 
 cd `dirname $0` 
 
-RUNTIME_DIR="/data/loads/mgi/vocload/runTimeMouseCyc"
-ARCHIVE_DIR="/data/loads/mgi/vocload/archiveMouseCyc"
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeMouseCyc"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveMouseCyc"
 DATA_DIR="/data/loads/mousecyc/mousecycload/input"
 
 export RUNTIME_DIR
@@ -42,10 +42,13 @@ export USE_SYNONYM_TYPE
 
 LOAD_PROGRAM="${LOAD_PROGRAM}"
 RCD_FILE="MouseCyc.rcd"
-MAINTAINER="mgiadmin"
-
 export LOAD_PROGRAM
 export RCD_FILE
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin";;
+esac
 export MAINTAINER
 
 # vocabulary attributes:
