@@ -28,8 +28,8 @@
 cd `dirname $0` 
 
 DATE=`date '+%Y-%m-%d'`
-RUNTIME_DIR="/data/loads/mgi/vocload/OMIM"
-ARCHIVE_DIR="${RUNTIME_DIR}/archive"
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/OMIM"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/archive"
 ARCHIVEREPORTS_DIR="${ARCHIVE_DIR}/reports"
 
 export DATE
@@ -38,9 +38,12 @@ export ARCHIVE_DIR
 export ARCHIVEREPORTS_DIR
 
 LOAD_PROGRAM="OMIM.setup OMIM.py OMIMtermcheck.py ${LOAD_PROGRAM}"
-MAINTAINER="mgiadmin"
-
 export LOAD_PROGRAM
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin";;
+esac
 export MAINTAINER
 
 # vocabulary attributes:
