@@ -20,8 +20,8 @@
 
 cd `dirname $0` 
 
-RUNTIME_DIR="/data/loads/mgi/vocload/runTimeRV"
-ARCHIVE_DIR="/data/loads/mgi/vocload/archiveRV"
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeRV"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveRV"
 
 export RUNTIME_DIR
 export ARCHIVE_DIR
@@ -38,9 +38,12 @@ USE_SYNONYM_TYPE=1
 export USE_SYNONYM_TYPE
 
 RCD_FILE="RV.rcd"
-MAINTAINER="mgiadmin, susan.bello@jax.org, richard.baldarelli@jax.org"
-
 export RCD_FILE
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin, susan.bello@jax.org, richard.baldarelli@jax.org";;
+esac
 export MAINTAINER
 
 # vocabulary attributes:
