@@ -1,3 +1,11 @@
+TAG: vocload-6-0-0-?
+DATE: 09/02/2015
+STAFF: lec
+CHANGES:
+1) TR11752/cell ontology (CL)
+CL.config, CL.rcd, CLindex.html
+loadOBO.py : vocabName = 'Cell Ontology'
+
 TAG: vocload-6-0-0-1
 DATE: 07/24/2015
 STAFF: lec
